--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- ETA' -->
         <div class="mb-3">
           <label for="eta" class="form-label">inserisci la tua età</label>
-          <input type="text" class="form-control" id="eta">
+          <input type="number" class="form-control" id="eta">
         </div>
 
         <button type="submit" class="btn btn-primary" onclick="conferma()">Submit</button>
